# rust_backend_design

./: Cargo.toml
inventory_db/: data.mdb  lock.mdb
src/: main.rs  routes.rs  struct.rs
